# skills_is_all_you_need

./: .gitignore  AGENT_INSTALL.md  Cargo.toml  README.md  README_CN.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
apps/desktop/: README.md  index.html  package.json  panel.html  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  i18n.test.ts  i18n.ts  panel-main.tsx  tauriClient.test.ts  tauriClient.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/panel/: DiagnosticsPanel.tsx  ManagementPanel.tsx  OverviewPanel.tsx  SettingsPanel.tsx  SkillListPanel.tsx  index.ts  panel.css
crates/core/: Cargo.toml  README.md
crates/core/src/: config_editor.rs  db.rs  error.rs  events.rs  lib.rs  models.rs  paths.rs  scanner.rs
crates/hook-ingest/: Cargo.toml  README.md
crates/hook-ingest/src/: main.rs
crates/hook-ingest/tests/: cli.rs
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  RESEARCH_NOTES.md
plugins/universal/: README.md
plugins/universal/.claude-plugin/: plugin.json
plugins/universal/.codex-plugin/: plugin.json
plugins/universal/assets/: README.md
plugins/universal/commands/: open-dashboard.md
plugins/universal/hooks/: codex-hooks.json  hooks.json
plugins/universal/skills/skill-usage-dashboard/: SKILL.md
tests/fixtures/: README.md
