[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/hook-ingest",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
