[package]
name = "skill-usage-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
