[package]
name = "skill-meter"
version.workspace = true
edition.workspace = true

[[bin]]
name = "skill-meter"
path = "src/main.rs"

[dependencies]
skill-usage-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = { workspace = true }
